# fancy_rl

./: .gitignore  README.md  pyproject.toml  setup.py
example/: config.yaml  example.py
fancy_rl/: __init__.py  loggers.py  on_policy.py  policy.py  ppo.py  utils.py
fancy_rl/algos/: __init__.py  algo.py  on_policy.py  ppo.py  trpl.py  vlearn.py
fancy_rl/loggers/: __init__.py  terminal.py
fancy_rl/objectives/: __init__.py  trpl.py  vlearn_loss.py
fancy_rl/projections/: __init__.py  base_projection.py  base_projection_layer.py  frob_projection.py  frob_projection_layer.py  frobenius_projection.py  identity_projection.py  identity_projection_layer.py  kl_projection.py  kl_projection_layer.py  w2_projection_layer.py  wasserstein_projection.py
fancy_rl/projections_new/: __init__.py  base_projection.py  frob_projection.py  identity_projection.py  kl_projection.py  w2_projection.py
test/: test_ppo.py  test_trpl.py  test_vlearn.py.disabled
